# go-zoom-kinesis

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
src/: .gitignore  client.rs  error.rs  lib.rs  processor.rs
src/monitoring/: metrics.rs  mod.rs  types.rs
src/retry/: backoff.rs  error.rs  mod.rs
src/store/: dynamodb.rs  memory.rs  mod.rs
src/test/: mocks.rs  mod.rs
src/tests/: initial_position_tests.rs  mod.rs  monitoring_utils.rs  test_suite.rs  test_suite2.rs  test_suite3.rs  tests2.rs
src/tests/common/: mod.rs
tests/: integration_tests.rs  shard_tests.rs
tests/common/: mod.rs
