[package]
name = "go-zoom-kinesis"
version = "0.9.1"
edition = "2021"
authors = ["Chris A. Gorski <cgorski@cgorski.org>"]
description = "A robust AWS Kinesis stream processor with checkpointing and retry capabilities"
license = "MIT"
repository = "https://github.com/yourusername/go-zoom-kinesis"
documentation = "https://docs.rs/go-zoom-kinesis"
readme = "README.md"
keywords = ["aws", "kinesis", "streaming", "async"]
categories = ["asynchronous", "web-programming"]

[features]
default = ["memory-store"]
dynamodb-store = ["aws-sdk-dynamodb"]
memory-store = []
test-utils = []

[dependencies]
aws-sdk-kinesis = "1.49"
aws-config = "1.5"
aws-credential-types = "1.2"
aws-smithy-types = "1.2"
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
bytes = "1.8.0"
parking_lot = "0.12.3"
chrono = "0.4.38"

[dependencies.aws-sdk-dynamodb]
version = "1.3"
optional = true
features = ["behavior-version-latest"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pretty_assertions = "1.0"

